--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+      <div class="container">
+        <div class="row">
+          <div class="column">
+            <div class="logo">
+              <img class="logo__image" src="src/images/cocktail.svg" alt="cocktail">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column-8">
+            <div class="searchbar">
+              <input id="search" class="form-control" type="text" placeholder="Find beer...">
+              <div class="suggests"></div>
+            </div>
+            <div class="result"></div>
+          </div>
+          <div class="column-3">
+            <div class="history">
+              <h2>Последние запросы:</h2>
+              <div class="history__items"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     <script type="module" src="src/js/index.ts"></script>
   </body>
 </html>
